# ecoSignalLab

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.Jules/: palette.md
.github/workflows/: ci.yml  release.yml
docs/: ALGORITHM_COMPARISON.md  ALGORITHM_INDEX.md  ATTRIBUTION.md  DOCS_AUTOMATION.md  GETTING_STARTED.md  GLOSSARY.md  METRICS_REFERENCE.md  ML_FEATURES.md  MOMENTS_EXTRACTION.md  NOVELTY_ANOMALY.md  PHASE1_ECOSYSTEM_GAP_ANALYSIS.md  REFERENCES.md  RELEASE.md  SCHEMA.md  SIGNAL_WINDOWS_VISUAL_GUIDE.md  TASK_RECIPES.md  TROUBLESHOOTING.md  VALIDATION.md
docs/schema/: analysis-output-0.2.0.json
examples/: calibration.yaml
scripts/: build_docs.py  compare_time_stretch_kpis.py  generate_signal_window_graphs.py
scripts/easy/: 01_stretch_2x.sh  02_analyze_and_plot.sh  03_extract_single_moment.sh  04_compare_kpis.sh  05_generate_signal_graphs.sh  README.md
src/esl/: __init__.py  __main__.py
src/esl/cli/: main.py
src/esl/core/: __init__.py  analyzer.py  audio.py  calibration.py  calibration_check.py  config.py  context.py  moments.py  profiles.py  spatial.py  streaming.py  utils.py
src/esl/docsgen/: __init__.py  builder.py
src/esl/ingest/: __init__.py  sources.py
src/esl/interop/: __init__.py
src/esl/io/: __init__.py  exporters.py
src/esl/metrics/: __init__.py  base.py  builtin.py  extended.py  helpers.py  registry.py
src/esl/ml/: __init__.py  export.py
src/esl/pipeline/: __init__.py  runner.py  validation.py
src/esl/plugins/: __init__.py
src/esl/project/: __init__.py  mode.py
src/esl/schema/: __init__.py  spec.py
src/esl/viz/: __init__.py  feature_vectors.py  plotting.py  spawn.py
tests/: test_analyzer_metadata.py  test_audio_and_analyze.py  test_calibration.py  test_cli_advanced_features.py  test_cli_smoke.py  test_compare_time_stretch_kpis_script.py  test_docs_links.py  test_docsgen_builder.py  test_exports.py  test_ffmpeg_provenance.py  test_generate_signal_window_graphs_script.py  test_metrics_golden.py  test_metrics_registry.py  test_ml_frametable.py  test_moments_extract.py  test_novelty_matrix.py  test_pipeline.py  test_plot_spawn.py  test_project_compare.py  test_schema_artifact.py  test_similarity_feature_vectors.py  test_validation.py
tests/golden/: metric_expectations.json
